Import of MELO/Time-Duration-Parse-More-0.002 from CPAN.
gitpan-cpan-distribution: Time-Duration-Parse-More
gitpan-cpan-version:      0.002
gitpan-cpan-path:         MELO/Time-Duration-Parse-More-0.002.tar.gz
gitpan-cpan-author:       MELO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 
 This archive contains the distribution Time-Duration-Parse-More,
-version 0.001:
+version 0.002:
 
-  a very cool module
+  parse natural language time duration expressions
 
 This software is Copyright (c) 2013 by Pedro Melo.
 
